# rust-wasm-landlock

./: .gitignore  Cargo.toml  README.md  helper.py  perf-helper.py  perf-landlock-helper.py
perf-results/: execution-times-medium.csv  execution-times-simple.csv  landlock-impact-10.csv  landlock-impact-11.csv  landlock-impact-12.csv  landlock-impact-13.csv  landlock-impact-2.csv  landlock-impact-3.csv  landlock-impact-4.csv  landlock-impact-5.csv  landlock-impact-6.csv  landlock-impact-7.csv  landlock-impact-8.csv  landlock-impact-9.csv  landlock-impact-folders-1.csv  landlock-impact-folders-2.csv  landlock-impact-folders-3.csv  landlock-impact-folders-4.csv  landlock-impact-folders-5.csv  landlock-impact-folders-6.csv  stats-medium.csv  stats-simple.csv
policies/: policy-d1-p2.yml  policy-d1-p3.yml  policy-d1-p4.yml  policy-d1-p5.yml  policy-d1-p6.yml  policy-d1-p7.yml  policy-d1-p8.yml  policy-d1-p9.yml  policy-d1.yml  policy-d2.yml  policy-d3.yml  policy-d4.yml  policy-d5.yml  policy-d6.yml
results/: access.csv  dir.csv  graphs.py
src/: args.rs  landlock.rs  main.rs  path_access.rs  wasi.rs  wasm.rs
wasm-bin/: README.md  hello.wasm  policy-d1-p3.yml  program-complex-2.rs  program-complex-2.wasm  program-complex.rs  program-complex.wasm  program-simple.wasm  read-file.rs  read-file.wasm  rw-file.rs  rw-file.wasm  touch-file.rs  touch-file.wasm
