[package]
name = "rust-wasm-landlock"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
landlock = { git = "https://github.com/landlock-lsm/rust-landlock" }
anyhow = "1.0"
clap = { version = "3.1.15", features = ["derive"] }
thiserror = "1.0"
wasmtime = "0.33.0"
wasmtime-wasi = "0.33.0"