[package]
name = "rust-wasm-landlock"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
landlock = "0.2.0"
anyhow = "1.0"
clap = { version = "3.1.15", features = ["derive"] }
thiserror = "1.0"
wasmtime = "5.0.0"
wasmtime-wasi = "5.0.0"